# adaptive-learning-demo

./: README.md  practice.json  pyproject.toml  requirements.txt  run.sh  skills.md
src/adaptive_learning/: __init__.py  cli.py  controller.py  data.py  models.py  view.py
src/adaptive_learning_cli/: __init__.py  cli.py  controller.py  data.py  models.py  quiz.py  view.py
src/db/problems/: easy.json  hard.json  medium.json
src/problems/: easy.json  hard.json  medium.json
tests/: TESTING_STRATEGY.md  test_cli.py  test_controller.py  test_data.py  test_e2e.py  test_quiz.py  test_quiz_state.py  test_use_case_single_file.py
tests/e2e/: test_cli_e2e.py
tests/unit/: test_cli.py  test_controller.py  test_data.py  test_models.py  test_view.py
